--- a/_includes/post-links.html
+++ b/_includes/post-links.html
@@ -9,7 +9,7 @@
     {% if node.sidebar_link %}
       <!-- {% if node.short_title != null %}{{ node.short_title }}{% else %}{{ node.title }}{% endif %} <br/> -->
       <a class="page-link {% if page.url == node.url %} active{% endif %}"
-          href="#{{node.title}}">{% if node.short_title != null %}{{ node.short_title }}{% else %}{{ node.title }}{% endif %}</a>
+          href="#{{node.title}}" style="text-align:center">{% if node.short_title != null %}{{ node.short_title }}{% else %}{{ node.title }}{% endif %}</a>
     {% endif %}
   {% endif %}
 {% endfor %}
