--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,4 +1,4 @@
-<nav id="sidebar-icon-links">
+<nav id="sidebar-icon-links" >
 
   </style>
   {% if site.hydeout.repo %}
@@ -46,25 +46,20 @@
   <!-- <a href="mailto:fariha.t13@gmail.comm">
     <i class="fa fa-envelope-o fa-2x" aria-hidden="true" title="EMail" style="margin-right: 15px"></i>
   </a> -->
-
-  <a href="https://scholar.google.com/citations?user=l9at90oAAAAJ">
-    <i class="fa fa-graduation-cap fa-2x" aria-hidden="true" title="Google Scholar" style="margin-right: 12px"></i>
+  <div style="display: block; margin:auto">
+  <a href="https://scholar.google.com/citations?user=l9at90oAAAAJ" >
+    <i class="fa fa-graduation-cap fa-2x" aria-hidden="true" title="Google Scholar"></i>
   </a>
   
   <a href="https://www.linkedin.com/in/fariha-tabassum-islam">
-    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true" title="LinkedIn" style="margin-right: 12px"></i>
+    <i class="fa fa-linkedin-square fa-2x" aria-hidden="true" title="LinkedIn"></i>
   </a>
 
   <a href="https://github.com/farihat13">
-    <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub" style="margin-right: 12px"></i>
+    <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
   </a>
-
-<br/>
-  
-fariha.t13 [at] gmail [dot] com
-
-
-
+  </div>
+ 
   <!-- {% if search_page %}
     <a id="search-link"
        class="icon{% if page.url == '/search' %} active{% endif %}"
