--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,11 @@
       display: block;
       margin: auto;
       border-radius: 50%;
+      /* border: 6px solid #2b09095c; */
     }
+    text-align:center
     </style>
-  <img src="Fariha.jpg?raw=true" width="300px" alt="Fariha">
+  <img src="Fariha.jpg?raw=true" width="120px" alt="Fariha">
   <header>
     <!-- <{% if page.layout == "index" %}h1{% else %}div{% endif %} class="site-title">
       <a href="{{ "/" | relative_url }}">
@@ -16,8 +18,9 @@
         {{ site.title }}
       </a>
     </{% if page.layout == "index" %}h1{% else %}div{% endif %}> -->
-    <p class="lead">{{ site.description }}</p>
+    <!-- <p class="lead">{{ site.description }}</p> -->
   </header>
+  <br/>
   {% include sidebar-nav-links.html %}
 
   <!-- {% if site.version %}
@@ -26,4 +29,6 @@
 
   {% include sidebar-icon-links.html %}
   <!-- {% include copyright.html %} -->
+    
+<span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
 </div>
