--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -43,6 +43,10 @@ $code-color: #bf616a !default;
 
 // Hyde theming
 $sidebar-bg-color: #4b3232 !default;
+// $sidebar-bg-color-begin: #326534 !default;
+// $sidebar-bg-color-end: #2a2436 !default;
+$sidebar-bg-color-begin: #155799 !default;
+$sidebar-bg-color-end: #2a2436 !default;
 $sidebar-fg-color: #fff !default;
 $sidebar-sticky: true !default;
 $layout-reverse: false !default;
