--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,5 +30,6 @@
   {% include sidebar-icon-links.html %}
   <!-- {% include copyright.html %} -->
     
+<span style="text-align: center;"><a href=”/data/FarihaCV.pdf”>CV</a></span> 
 <span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
 </div>
