added scholar to sidebar

--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -51,9 +51,9 @@
     <i class="fa fa-graduation-cap fa-2x" aria-hidden="true" title="Google Scholar"></i>
   </a>
   
-  <a href="https://www.linkedin.com/in/fariha-tabassum-islam">
+  <!-- <a href="https://www.linkedin.com/in/fariha-tabassum-islam">
     <i class="fa fa-linkedin-square fa-2x" aria-hidden="true" title="LinkedIn"></i>
-  </a>
+  </a> -->
 
   <a href="https://github.com/farihat13">
     <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
