--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,15 +21,25 @@
     <!-- <p class="lead">{{ site.description }}</p> -->
   </header>
   <br/>
-  {% include sidebar-nav-links.html %}
+
+  {% include sidebar-nav-links.html %}  
+
+  <span style="text-align: center;">
+    <a href="data/FarihaCV.pdf">CV</a>
+  </span> 
+  <span style="text-align: center;">
+    <a href="https://scholar.google.com/citations?user=3jceKgQAAAAJ">Google Scholar</a>
+  </span> 
+  /* [Google Scholar](https://scholar.google.com/citations?user=3jceKgQAAAAJ) */
 
   <!-- {% if site.version %}
     <span class="site-version">Currently v{{ site.version }}</span>
   {% endif %} -->
 
   {% include sidebar-icon-links.html %}
+
+  <span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
+
   <!-- {% include copyright.html %} -->
-    
-<span style="text-align: center;"><a href="data/FarihaCV.pdf">CV</a></span> 
-<span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
+
 </div>
