--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,12 +30,16 @@
   <span style="text-align: center;">
     <a href="https://scholar.google.com/citations?user=3jceKgQAAAAJ">Google Scholar</a>
   </span> 
+  <span style="text-align: center;">
+    <a href="https://github.com/farihat13">GitHub</a>
+  </span> 
+  
 
   <!-- {% if site.version %}
     <span class="site-version">Currently v{{ site.version }}</span>
   {% endif %} -->
 
-  {% include sidebar-icon-links.html %}
+  <!-- {% include sidebar-icon-links.html %} -->
 
   <span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
 
