--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,12 +3,13 @@
     img {
       display: block;
       margin: auto;
-      border-radius: 50%;
+      /* border-radius: 50%; */
       /* border: 6px solid #2b09095c; */
     }
+
     text-align:center
-    </style>
-  <img src="Fariha.jpg?raw=true" width="120px" alt="Fariha">
+  </style>
+  <img src="images/Fariha2.jpg?raw=true" width="120px" style="border-radius:50%;" alt="Fariha">
   <header>
     <!-- <{% if page.layout == "index" %}h1{% else %}div{% endif %} class="site-title">
       <a href="{{ "/" | relative_url }}">
@@ -20,30 +21,28 @@
     </{% if page.layout == "index" %}h1{% else %}div{% endif %}> -->
     <!-- <p class="lead">{{ site.description }}</p> -->
   </header>
-  <br/>
+  <br />
 
-  {% include sidebar-nav-links.html %}  
+  {% include sidebar-nav-links.html %}
 
   <br>
   <span style="text-align: center;">
     <a href="data/FarihaCV.pdf">CV</a>
-  </span> 
+  </span>
   <span style="text-align: center;">
     <a href="https://scholar.google.com/citations?user=3jceKgQAAAAJ">Google Scholar</a>
-  </span> 
+  </span>
   <span style="text-align: center;">
     <a href="https://github.com/farihat13">GitHub</a>
-  </span> 
-  
+  </span>
+
 
   <!-- {% if site.version %}
     <span class="site-version">Currently v{{ site.version }}</span>
   {% endif %} -->
 
-  <!-- {% include sidebar-icon-links.html %} -->
-  
   <br>
-  <span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span> 
+  <span style="text-align: center;">fariha.t13 [at] gmail [dot] com</span>
 
   <!-- {% include copyright.html %} -->
 
