modified blockquote and post style

--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -91,10 +91,10 @@ abbr {
 
 blockquote {
   border-left: 0.1rem solid $border-color;
-  color: #7a7a7a;
+  color: dimgray;
   margin: 0.8rem 0;
   padding: 0.5rem 1rem;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
 
   p:last-child {
     margin-bottom: 0;
