--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -30,19 +30,18 @@ h3 {
   margin-top: 1.5rem;
 }
 
+h4, h5, h6 {
+  margin-top: 0.1rem;
+}
 h4 {
   font-size: 1rem;
-  margin-top: 0.1rem;
 }
-
-h5,
-h6 {
-  margin-top: 0.1rem;
+h5{
+  font-size: 0.85rem;
 }
-
 h6 {
+  font-size: 0.8rem;
   color: darkblue;
-  margin-top: 0.1rem;
 }
 
 p {
