--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -7,7 +7,9 @@ h2,
 h3,
 h4,
 h5,
-h6,
+h6, 
+fh2, 
+fh3,
 .site-title {
   color: $heading-color;
   font-weight: 600;
@@ -32,16 +34,17 @@ h3 {
 
 h4 {
   font-size: 1rem;
+  margin-top: 1rem;
 }
 
 h5{
   font-size: 0.85rem;
-  color: #555;
+  color: $gray-4;
 }
 
 h6 {
   font-size: 0.8rem;
-  color: darkblue;
+  color: $sidebar-mid;
 }
 
 h4, h5, h6 {
@@ -51,6 +54,27 @@ h4, h5, h6 {
 p {
   margin-bottom: 1rem;
   margin-top: 0;
+}
+
+// my type fh2 fh3
+fh2, 
+fh3 {
+  color: $heading-color;
+  font-weight: 600;
+  line-height: 1.25;
+  margin-bottom: $heading-spacing;
+  text-rendering: optimizeLegibility;
+}
+fh2{
+  font-size: 0.85rem;
+  margin-top: 0.1rem;
+  color:darkslategray;
+  
+}
+fh3{
+  font-size: 0.8rem;
+  color:lightslategray;
+  margin-top: 0.1rem;
 }
 
 strong {
@@ -108,6 +132,8 @@ blockquote {
     // padding-right: 5rem;
   }
 }
+
+
 
 // Markdown footnotes
 //
