--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -10,10 +10,12 @@ h5,
 h6, 
 .site-title {
   color: $heading-color;
-  font-weight: 600;
   line-height: 1.25;
   margin-bottom: $heading-spacing;
   text-rendering: optimizeLegibility;
+}
+h1, h2, h3 {
+  font-weight: 600;
 }
 
 h1 {
@@ -31,16 +33,19 @@ h3 {
 }
 
 h4 {
+  font-weight: 500;
   font-size: 1rem;
   margin-top: 1rem;
 }
 
 h5{
+  font-weight: 450;
   font-size: 0.85rem;
   color: $gray-4;
 }
 
 h6 {
+  font-weight: 450;
   font-size: 0.8rem;
   color: $sidebar-mid;
 }
@@ -55,23 +60,8 @@ p {
 }
 
 // my type fh2 fh3
-// fh2, 
-// fh3 {
-//   font-weight: 600;
-//   line-height: 1.25;
-//   margin-bottom: $heading-spacing;
-//   text-rendering: optimizeLegibility;
-// }
 fh2{
-  font-size: 0.85rem;
-  margin-top: 0.1rem;
-  color:darkslategray;
-  
-}
-fh3{
-  font-size: 0.8rem;
-  color:lightslategray;
-  margin-top: 0.1rem;
+  font-size: 0.75rem;
 }
 
 strong {
