--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
 
   <br>
   <span style="text-align: center;">
-    <a href="data/FarihaCV.pdf"><u>CV</u></a>
+    <a href="data/Fariha_Resume.pdf"><u>Resume</u></a>
   </span>
 
   <span style="text-align: center;">
